# app-ont

./: APP_SPECIFICATION.md  Makefile  README.md
.github/workflows/: build.yml  build_and_functional_tests.yml  codeql_checks.yml  guidelines_enforcer.yml
doc/: APP_SPECIFICATION.md
fuzzing/: CMakeLists.txt  README.md  fuzz_tx_parser.c  mock_syscalls.c
src/: address.c  address.h  app_main.c  constants.h  globals.h  sw.h  types.h
src/apdu/: dispatcher.c  dispatcher.h
src/handler/: get_app_name.c  get_public_key.c  get_version.c  sign_msg.c  sign_msg.h  sign_tx.c  sign_tx.h
src/helper/: send_reponse.c  send_response.h
src/message/: types.h
src/transaction/: contract.c  contract.h  deserialize.c  deserialize.h  parse.c  parse.h  tx_types.h  utils.c  utils.h
src/ui/: display.h  menu_nbgl.c  nbgl_display_address.c  nbgl_display_message.c  nbgl_display_transaction.c  tx_init.c  tx_init.h  types.h
src/ui/action/: validate.c  validate.h
tests/: test_add_init_pos_cmd.py  test_authorize_for_peer_cmd.py  test_change_max_authorization_cmd.py  test_govern_withdraw_fee_cmd.py  test_multi_transfer_sign_cmd.py  test_name_version.py  test_oep4_neovm_approve_sign_cmd.py  test_oep4_neovm_sign_cmd.py  test_oep4_neovm_transfer_from_sign_cmd.py  test_oep4_sign_cmd.py  test_personal_msg_cmd.py  test_pubkey_cmd.py  test_quit_node_cmd.py  test_reduce_init_pos_cmd.py  test_register_candidate_cmd.py  test_set_fee_percentage_cmd.py  test_sign_approve_tx_cmd.py  test_sign_cmd.py  test_sign_transfer_from_cmd.py  test_un_authorize_for_peer_cmd.py  test_withdraw_cmd.py  utils.py
tests/application_client/: boilerplate_command_sender.py  boilerplate_personal_msg.py  boilerplate_response_unpacker.py  boilerplate_transaction.py
unit-tests/: CMakeLists.txt  test_tx_parser.c
